# sistema_Autenticacion

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2024-12-21-060241_create_roles/: up.sql
src/: main.rs  models.rs  schema.rs
static/: login.html  register.html
