[package]
name = "sistema_autenticacion"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
diesel = { version = "1.4", features = ["postgres"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.10"
chrono = "0.4"
actix-session = "0.10.1"


